--- a/thorax/scripts/std/build.xml
+++ b/thorax/scripts/std/build.xml
@@ -1,6 +1,7 @@
 <!--Copyright © 2018 Acumen Solutions, Inc. The Thorax Salesforce Metadata Utility was created by Acumen Solutions.
 Except for the limited rights to use and make copies of the Software as provided in a License Agreement, all rights are reserved. -->
 <project name="std" basedir="." xmlns:sf="antlib:com.salesforce">
+<property name="updateFlag" value="true"/>
 
 	<target name="clearTemp">
 		<delete dir="${root}/temp"/>
